# penumbra-ui-backend

./: .gitmodules  CMakeLists.txt  README.md
.claude/skills/run-penumbra-ui-backend/: SKILL.md  smoke.sh
demo/: main.cpp
docs/: build_context_style_mismatch_gap.md  iris_penumbra_backend_adapter_decision.md  iris_penumbra_backend_lustre_bridge_decision.md  next_steps.md  penumbra_ui_backend_adapter_decision.md  penumbra_ui_backend_lustre_bridge_decision.md  pseudo_class_plain_box_decision.md
include/IrisPenumbraBackend/: PenumbraWidgetAdapter.h  Walker.h
include/IrisPenumbraBackend/Lustre/: StyleApplier.h
include/PenumbraUiBackend/: PenumbraWidgetAdapter.h  Walker.h
include/PenumbraUiBackend/Lustre/: StyleApplier.h  StyleResolution.h
src/IrisPenumbraBackend/: PenumbraWidgetAdapter.cpp
src/IrisPenumbraBackend/Lustre/: StyleApplier.cpp
src/PenumbraUiBackend/: PenumbraWidgetAdapter.cpp  Walker.cpp
src/PenumbraUiBackend/Lustre/: StyleApplier.cpp  StyleResolution.cpp
tests/: LustreStyleApplierTests.cpp  PenumbraWidgetAdapterTests.cpp  SlotWiringTests.cpp  StyleMismatchDiagnosticTests.cpp  StyleWiringTests.cpp  WalkerTests.cpp
